plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.laimory'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// AWS SDK v2: S3 presigned PUT 업로드 + 객체 삭제(사진 저장 인프라). S3Presigner도 s3 모듈에 포함.
	implementation platform('software.amazon.awssdk:bom:2.31.6')
	implementation 'software.amazon.awssdk:s3'
	// JSON 구조화 로그(ELK 수집용 stdout). Spring BOM 비관리 → 버전 명시. 8.x = logback 1.5.x 호환.
	implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// 비동기 결과 폴링 대기(fake AI dispatcher E2E). 버전은 Spring BOM 관리.
	testImplementation 'org.awaitility:awaitility'
	// 아키텍처 가드: Redis 직접 접근 금지(NamespacedRedis facade 강제) 등 규칙을 테스트로 검증. Spring BOM 비관리 → 버전 명시.
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

// 멀티스테이지 Docker 빌드에서 실행 가능한 bootJar 하나만 산출되도록 plain jar 비활성화
tasks.named('jar') { enabled = false }

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'integration'
	}
}

// 통합 테스트(실 MySQL/Redis 필요). 로컬: docker compose up -d 후 ./gradlew integrationTest
tasks.register('integrationTest', Test) {
	description = 'Runs @Tag("integration") tests (requires local MySQL/Redis).'
	group = 'verification'
	useJUnitPlatform {
		includeTags 'integration'
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	shouldRunAfter('test')
}
